# chatbotv2_backend

./: .gitignore  README.md  chatbot_backend.service  config.py  database.py  deploy_key.pem  deploy_server.bat  fix_missing_subscriptions.py  main.py  nginx_chatbot_com.conf  nginx_chatbotv2.conf  patch_db_migrate.py  patch_lead_bug.py  pyproject.toml  requirements.txt  run_session_tests.py
.github/workflows/: deploy.yml
model/: admin_model.py  appointments.py  chat_model.py  knowledge_model.py  lead_model.py  notification_model.py  subscription_model.py  team_access_model.py  user_model.py  widget_settings.py
routers/: admin_route.py  appointments_router.py  auth_router.py  billing_router.py  chat_router.py  dashboard_router.py  invite_router.py  knowledge_router.py  lead_router.py  notification_router.py  subscription_router.py  team_access_router.py  upload_router.py  user_profile_router.py  user_router.py  widget_settings.py
schemas/: admin.py  lead_schema.py  notification_schema.py  user.py
services/: auth_service.py  billing_service.py  dashboard_service.py  lead_service.py  notification_service.py  team_access_service.py  upload_service.py  user_service.py  widget_settings.py
services/admin/: admin_auth.py  admin_service.py
services/appointments/: __init__.py  service.py
services/chatbot/: __init__.py  agent.py  company_context.py  lead_extractor.py  llm.py  prompts.py  session_cache.py  tools.py  ws_manager.py
tests/: test_chat_router_flow.py  test_lead_extractor.py  test_session_cache.py  test_session_cache_standalone.py
utils/: email.py
(+7 files in other folders)
